Settings: Change Picture: Fix tooltop

We don't actually track the loading state of the Google profile image
 so we should just remove the (loading) version of the tooltip.

Bug: 756761
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I8d7f53c62cf6699b1b2cea2b52cf8ad87538d3dd
Reviewed-on: https://chromium-review.googlesource.com/621407
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495702}
Former-commit-id: 278b43368b1ad92f37ddc4363b6c18f14e857eb6