ui/webui/resources/cr_elements/chromeos/cr_picture/cr_picture_list.js
@@ -28,7 +28,6 @@ Polymer({
     chooseFileLabel: String,
     oldImageLabel: String,
     profileImageLabel: String,
-    profileImageLoadingLabel: String,
     takePhotoLabel: String,
 
     /**
